<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="417dp"
        android:layout_height="726dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:text="@string/user_name"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/enter_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:textSize="20sp"
            android:textStyle="italic"
            android:inputType="textPersonName"
            android:hint="@string/hint_name"
            android:autofillHints="@string/user_name"/>

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:text="@string/user_email"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/enter_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textStyle="italic"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:autofillHints="@string/user_email" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="300sp"
            android:layout_height="70sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="#00BCD4"
            android:text="@string/button"
            android:textSize="25sp"
            android:visibility="visible" />
        <Button
            android:id="@+id/button_clear"
            android:layout_width="300sp"
            android:layout_height="70sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="#00BCD4"
            android:text="@string/button_clear"
            android:textSize="25sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/success"
            android:layout_width="386dp"
            android:layout_height="296dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:padding="10dp"
            android:text="@string/success"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>